# paypercase-program

./: CONTRIBUTING.md  LICENSE  README-SETUP.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release-windows-installer.yml
scripts/: export_defaults.py
src/: App.vue  main.ts
src-tauri/: Cargo.toml  default_config.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: connection.rs  data.rs  delete.rs  mod.rs  pending.rs  settings.rs
src-tauri/src/db/: hosxp.rs  local.rs  mod.rs
src/assets/: theme.css
src/components/controls/: AppDateInput.vue  CalendarPicker.vue
src/components/dialog/: ConnectionDialog.vue  SettingsDialog.vue
src/components/layout/: AppMenuBar.vue  AppStatusBar.vue  AppToast.vue
src/components/settings/: DrugTab.vue  PayoutTab.vue  ProcedureTab.vue  ProviderTab.vue  PttypeTab.vue
src/components/tabs/: DataViewTab.vue  DeleteDataTab.vue  PendingExportTab.vue
src/composables/: useCommands.ts  useToast.ts
src/stores/: app.ts
src/types/: index.ts
