[package]
name = "paypercase-tauri"
version = "5.0.0"
description = "PayPerCase — ระบบจัดการค่าตอบแทนพนักงานนวดแผนไทย"
authors = ["PayPerCase"]
edition = "2021"

[lib]
name = "paypercase_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
mysql = "25"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "sync"] }

